--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Bresser 5-in-1/6-in-1/7-in-1 868 MHz Weather Sensor Radio Receiver; provides data via LoRaWAN to The Things Network",
   "main": "BresserWeatherSensorTTN.ino",
   "frameworks": "arduino",
-  "platforms": "ESP32",
+  "platforms": [
+    "ESP32",
+    "RP2040"
+],
   "directories": {
     "src": "src"
   },
