--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -87,7 +87,7 @@ jobs:
             "NimBLE-Arduino@1.4.1"
             "ATC_MiThermometer@0.2.1"
             "TheengsDecoder@1.5.7"
-            "vshymanskyy/Preferences@2.1.0")
+            "Preferences@2.1.0")
           for i in "${required_libs[@]}"
           do
             arduino-cli lib install "$i"
