--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,6 +23,7 @@ jobs:
           - esp32:esp32:heltec_wireless_stick:PSRAM=disabled
           - esp32:esp32:heltec_wifi_lora_32_V2
           - esp32:esp32:featheresp32
+          - esp32:esp32:m5stack-core2
           - esp32:esp32:adafruit_feather_esp32s2
           - rp2040:rp2040:adafruit_feather:dbgport=Serial
 
@@ -87,7 +88,9 @@ jobs:
             "NimBLE-Arduino@1.4.1"
             "ATC_MiThermometer@0.2.1"
             "TheengsDecoder@1.7.2"
-            "Preferences@2.1.0")
+            "Preferences@2.1.0"
+            "M5Unified@0.1.13"
+            "M5Core2@0.1.9")
           for i in "${required_libs[@]}"
           do
             arduino-cli lib install "$i"
