--- a/WeatherSensorCfg.h.template
+++ b/WeatherSensorCfg.h.template
@@ -56,6 +56,11 @@
 // 20240122 Modified for unit testing
 // 20240204 Added separate ARDUINO_heltec_wireless_stick_v2/v3
 // 20240322 Added pin definitions for M5Stack Core2 with M5Stack Module LoRa868
+// 20240415 Added pin definitions for ESP32-S3 PowerFeather with with RFM95W "FeatherWing" ADA3232
+// 20240417 Modified SENSOR_IDS_INC
+// 20240425 Added define variant ARDUINO_heltec_wifi_lora_32_V3
+// 20240507 Renamed NUM_SENSORS to MAX_SENSORS_DEFAULT
+//          NOTE: ARDUINO_ARCH_AVR no longer supported due to code size!!!
 //
 // ToDo:
 // -
@@ -70,7 +75,7 @@
 // ------------------------------------------------------------------------------------------------
 // --- Weather Sensors ---
 // ------------------------------------------------------------------------------------------------
-#define NUM_SENSORS     1       // Number of sensors to be received
+#define MAX_SENSORS_DEFAULT 1       // Maximum number of sensors to be received
 
 // List of sensor IDs to be excluded - can be empty
 #define SENSOR_IDS_EXC { 0x792882A2 }
@@ -115,8 +120,6 @@
 // ------------------------------------------------------------------------------------------------
 // --- Board ---
 // ------------------------------------------------------------------------------------------------
-// Use pinning for LoRaWAN Node
-
 
 // LILIGO TTGO LoRaP32 board with integrated RF tranceiver (SX1276)
 // See pin definitions in
@@ -185,7 +188,7 @@
 
 #elif defined(ARDUINO_TTGO_LoRa32_V2)
     #pragma message("ARDUINO_TTGO_LoRa32_V2 defined; using on-board transceiver")
-    #pragma message("LoRa DIO1 must be wired to GPIO33 manually!")
+    #pragma message("Wiring required for LMIC: DIO1 to GPIO33")
     #define USE_SX1276
 
 #elif defined(ARDUINO_TTGO_LoRa32_v21new)
@@ -210,13 +213,18 @@
     #pragma message("ARDUINO_heltec_wifi_lora_32_V2 defined; using on-board transceiver")
     #define USE_SX1276
 
-#elif defined(ARDUINO_heltec_wifi_32_lora_V3)
-    #pragma message("ARDUINO_heltec_wifi_32_lora_V3 defined; using on-board transceiver")
+#elif defined(ARDUINO_heltec_wifi_32_lora_V3) || defined(ARDUINO_heltec_wifi_lora_32_V3)
+    #pragma message("ARDUINO_heltec_wifi_32_lora_V3 (or similar) defined; using on-board transceiver")
     #define USE_SX1262
 
 #elif defined(ARDUINO_ADAFRUIT_FEATHER_ESP32S2)
     #pragma message("ARDUINO_ADAFRUIT_FEATHER_ESP32S2 defined; assuming RFM95W FeatherWing will be used")
     #define USE_SX1276
+
+#elif defined(ARDUINO_ADAFRUIT_FEATHER_ESP32_V2)
+    #pragma message("ARDUINO_ADAFRUIT_FEATHER_ESP32_V2 defined; assuming RFM95W FeatherWing will be used")
+    #define USE_SX1276
+    #pragma message("Required wiring: A to RST, B to DIO1, D to DIO0, E to CS")
 
 #elif defined(ARDUINO_FEATHER_ESP32)
     #pragma message("ARDUINO_FEATHER_ESP32 defined; assuming RFM95W FeatherWing will be used")
@@ -224,22 +232,25 @@
     #pragma message("Required wiring: A to RST, B to DIO1, D to DIO0, E to CS")
 
 #elif defined(ARDUINO_M5STACK_CORE2) || defined(ARDUINO_M5STACK_Core2)
+    // Note: Depending on board package file date, either variant is used - 
+    //       see https://github.com/espressif/arduino-esp32/issues/9423!
     #pragma message("ARDUINO_M5STACK_CORE2 defined; assuming M5Stack Module LoRa868 will be used")
     #define USE_SX1276
-    #pragma message("Required wiring: DIO1 to GPIO35")
+    #pragma message("Wiring required for LMIC: DIO1 to GPIO35")
 
-#elif defined(ARDUINO_AVR_FEATHER32U4)
-    #pragma message("ARDUINO_AVR_FEATHER32U4 defined; assuming this is the Adafruit Feather 32u4 RFM95 LoRa Radio")
+#elif defined(ARDUINO_ESP32S3_POWERFEATHER)
+    #pragma message("ARDUINO_ESP32S3_POWERFEATHER defined; assuming RFM95W FeatherWing will be used")
     #define USE_SX1276
+    #pragma message("Required wiring: A to RST, B to DIO1, D to DIO0, E to CS")
 
 #elif defined(ARDUINO_ADAFRUIT_FEATHER_RP2040)
-    #pragma message("ARDUINO_ADAFRUIT_FEATHER_RP2040 defined; assuming assuming RFM95W FeatherWing will be used")
+    #pragma message("ARDUINO_ADAFRUIT_FEATHER_RP2040 defined; assuming RFM95W FeatherWing will be used")
     #define USE_SX1276
     #pragma message("Required wiring: A to RST, B to DIO1, D to DIO0, E to CS")
 
 #elif defined(ARDUINO_ESP32_DEV) || defined(ARDUINO_DFROBOT_FIREBEETLE_ESP32)
-    #define LORAWAN_NODE
-    //#define FIREBEETLE_ESP32_COVER_LORA
+    //#define LORAWAN_NODE
+    #define FIREBEETLE_ESP32_COVER_LORA
 
     #if defined(FIREBEETLE_ESP32_COVER_LORA)
         #pragma message("FIREBEETLE_ESP32_COVER_LORA defined; assuming this is a FireBeetle ESP32 with FireBeetle Cover LoRa")
@@ -332,48 +343,6 @@
 
 #endif
 
-
-//   Replacement for
-//   https://github.com/espressif/arduino-esp32/blob/master/cores/esp32/esp32-hal-log.h
-//   on Arduino AVR:
-#if defined(ARDUINO_ARCH_AVR)
-    #define ARDUHAL_LOG_LEVEL_NONE      0
-    #define ARDUHAL_LOG_LEVEL_ERROR     1
-    #define ARDUHAL_LOG_LEVEL_WARN      2
-    #define ARDUHAL_LOG_LEVEL_INFO      3
-    #define ARDUHAL_LOG_LEVEL_DEBUG     4
-    #define ARDUHAL_LOG_LEVEL_VERBOSE   5
-
-    // Set desired level here!
-    #define CORE_DEBUG_LEVEL ARDUHAL_LOG_LEVEL_INFO
-
-    #if defined(DEBUG_ESP_PORT) && CORE_DEBUG_LEVEL > ARDUHAL_LOG_LEVEL_NONE
-        #define log_e(...) { printf(__VA_ARGS__); println(); }
-     #else
-        #define log_e(...) {}
-     #endif
-    #if defined(DEBUG_ESP_PORT) && CORE_DEBUG_LEVEL > ARDUHAL_LOG_LEVEL_ERROR
-        #define log_w(...) { printf(__VA_ARGS__); println(); }
-     #else
-        #define log_w(...) {}
-     #endif
-    #if defined(DEBUG_ESP_PORT) && CORE_DEBUG_LEVEL > ARDUHAL_LOG_LEVEL_WARN
-        #define log_i(...) { printf(__VA_ARGS__); println(); }
-     #else
-        #define log_i(...) {}
-     #endif
-    #if defined(DEBUG_ESP_PORT) && CORE_DEBUG_LEVEL > ARDUHAL_LOG_LEVEL_INFO
-        #define log_d(...) { printf(__VA_ARGS__); println(); }
-     #else
-        #define log_d(...) {}
-     #endif
-    #if defined(DEBUG_ESP_PORT) && CORE_DEBUG_LEVEL > ARDUHAL_LOG_LEVEL_DEBUG
-        #define log_v(...) { printf(__VA_ARGS__); println(); }
-     #else
-        #define log_v(...) {}
-     #endif
-#endif
-
 #if ( (defined(USE_CC1101) && defined(USE_SX1276)) || \
       (defined(USE_SX1276) && defined(USE_SX1262)) || \
       (defined(USE_SX1262) && defined(USE_CC1101)) )
@@ -462,7 +431,7 @@
     // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
     #define PIN_RECEIVER_RST  RST_LoRa
 
-#elif defined(ARDUINO_heltec_wifi_32_lora_V3)
+#elif defined(ARDUINO_heltec_wifi_32_lora_V3) || defined(ARDUINO_heltec_wifi_lora_32_V3)
     // Use pinning for Heltec WiFi LoRa32 V3
     #define PIN_RECEIVER_CS   SS
 
@@ -488,6 +457,19 @@
     // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
     #define PIN_RECEIVER_RST  9
 
+#elif defined(ARDUINO_ADAFRUIT_FEATHER_ESP32_V2)
+    // Use pinning for Adafruit Feather ESP32 with RFM95W "FeatherWing" ADA3232
+    #define PIN_RECEIVER_CS   14
+
+    // CC1101: GDO0 / RFM95W/SX127x: G0
+    #define PIN_RECEIVER_IRQ  32
+
+    // CC1101: GDO2 / RFM95W/SX127x: G1
+    #define PIN_RECEIVER_GPIO 33
+
+    // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
+    #define PIN_RECEIVER_RST  27
+
 #elif defined(ARDUINO_FEATHER_ESP32)
     // Use pinning for Adafruit Feather ESP32 with RFM95W "FeatherWing" ADA3232
     #define PIN_RECEIVER_CS   14
@@ -501,7 +483,9 @@
     // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
     #define PIN_RECEIVER_RST  27
 
-#elif defined(ARDUINO_M5STACK_CORE2)
+#elif defined(ARDUINO_M5STACK_CORE2) || defined(ARDUINO_M5STACK_Core2)
+    // Note: Depending on board package file date, either variant is used - 
+    //       see https://github.com/espressif/arduino-esp32/issues/9423!
     // Use pinning for M5Stack Core2 with M5Stack Module LoRa868
     #define PIN_RECEIVER_CS   33
 
@@ -513,6 +497,19 @@
 
     // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
     #define PIN_RECEIVER_RST  26
+
+#elif defined(ARDUINO_ESP32S3_POWERFEATHER)
+    // Use pinning for ESP32-S3 PowerFeather with RFM95W "FeatherWing" ADA3232
+    #define PIN_RECEIVER_CS   15
+
+    // CC1101: GDO0 / RFM95W/SX127x: G0
+    #define PIN_RECEIVER_IRQ  16
+
+    // CC1101: GDO2 / RFM95W/SX127x: G1
+    #define PIN_RECEIVER_GPIO 18
+
+    // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
+    #define PIN_RECEIVER_RST  45
 
 #elif defined(ESP32)
     // Generic pinning for ESP32 development boards
@@ -539,19 +536,6 @@
 
     // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
     #define PIN_RECEIVER_RST  2
-    
-#elif defined(ARDUINO_AVR_FEATHER32U4)
-    // Pinning for Adafruit Feather 32u4 
-    #define PIN_RECEIVER_CS   8
-
-    // CC1101: GDO0 / RFM95W/SX127x: G0
-    #define PIN_RECEIVER_IRQ  7
-
-    // CC1101: GDO2 / RFM95W/SX127x: G1 (not used)
-    #define PIN_RECEIVER_GPIO 99
-
-    // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
-    #define PIN_RECEIVER_RST  4
 
 #elif defined(ARDUINO_ADAFRUIT_FEATHER_RP2040)
     // Use pinning for Adafruit Feather RP2040 with RFM95W "FeatherWing" ADA3232
